--- a/package.json
+++ b/package.json
@@ -11,5 +11,25 @@
     "mongoose": "^8.0.0",
     "multer": "^2.0.2",
     "socket.io": "^4.8.1"
-  }
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/atul841/backend-.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/atul841/backend-/issues"
+  },
+  "homepage": "https://github.com/atul841/backend-#readme"
 }
